--- a/ios/15.7.0.plist
+++ b/ios/15.7.0.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>15.7.0.ipa</string>
+				<string>抖音火山版</string>
 			</dict>
 		</dict>
 	</array>
