--- a/ios/22.3.6.plist
+++ b/ios/22.3.6.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>22.3.6.ipa</string>
+				<string>抖音火山版</string>
 			</dict>
 		</dict>
 	</array>
