--- a/ios/22.3.6.plist
+++ b/ios/22.3.6.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-                    <string>https://ghproxy.com/https://github.com/HuYeFe/test/releases/download/1/22.3.6.ipa</string>
+                    <string>https://github.com/HuYeFe/test/releases/download/1/22.3.6.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
